[package]
name = "proxy-scraper-checker"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
async-trait = "=0.1.89"
color-eyre = "=0.6.5"
crossterm = { version = "=0.28.1", features = [
    "event-stream",
], optional = true }
dirs = "=6.0.0"
fancy-regex = "=0.16.1"
foldhash = "=0.2.0"
futures = { version = "=0.3.31", optional = true }
hickory-resolver = "=0.25.2"
http = "=1.3.1"
httpdate = "=1.0.3"
itertools = "=0.14"
maxminddb = { version = "=0.26.0", features = ["mmap"] }
parking_lot = "=0.12.4"
rand = "=0.9.2"
ratatui = { version = "=0.29.0", optional = true }
reqwest = { version = "=0.12.23", default-features = false, features = [
    "brotli",
    "charset",
    "gzip",
    "http2",
    "json",
    "rustls-tls",
    "socks",
    "system-proxy",
] }
reqwest-middleware = "=0.4.2"
rlimit = "=0.10.2"
serde = "=1.0.225"
serde_json = "=1.0.145"
tokio = { version = "=1.47.1", features = ["full"] }
tokio-util = "=0.7.16"
toml = "=0.9.6"
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["parking_lot"] }
tui-logger = { version = "=0.17.3", features = [
    "tracing-support",
], optional = true }
url = "=2.5.7"

[target.'cfg(all(any(target_arch = "aarch64", target_arch = "x86_64"), any(target_os = "linux", target_os = "macos", target_os = "windows")))'.dependencies]
mimalloc = { version = "=0.1.48", optional = true, features = ["v3"] }

[features]
mimalloc = ["dep:mimalloc"]
tui = ["dep:crossterm", "dep:futures", "dep:ratatui", "dep:tui-logger"]

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
