[package]
name = "proxy-scraper-checker"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
async-trait = "=0.1.89"
color-eyre = "=0.6.5"
crossterm = { version = "=0.28.1", default-features = false, features = [
    "event-stream",
    "windows",
], optional = true }
dhat = { version = "=0.3.3", optional = true }
dirs = "=6.0.0"
fancy-regex = "=0.16.2"
foldhash = "=0.2.0"
futures = { version = "=0.3.31", default-features = false, features = [
    "std",
], optional = true }
hickory-resolver = "=0.25.2"
http = "=1.4.0"
httpdate = "=1.0.3"
itertools = "=0.14"
log = { version = "=0.4.28", features = [
    "max_level_debug",
    "release_max_level_debug",
    "std",
] }
maxminddb = { version = "=0.26.0", features = ["mmap"] }
parking_lot = "=0.12.5"
rand = { version = "=0.9.2", default-features = false, features = [
    "std",
    "thread_rng",
] }
ratatui = { version = "=0.29.0", default-features = false, features = [
    "crossterm",
], optional = true }
reqwest = { version = "=0.12.24", default-features = false, features = [
    "brotli",
    "charset",
    "gzip",
    "http2",
    "rustls-tls",
    "socks",
    "system-proxy",
] }
reqwest-middleware = "=0.4.2"
rlimit = "=0.10.2"
serde = "=1.0.228"
serde_json = "=1.0.145"
smallvec = { version = "=1.15.1", features = [
    "const_generics",
    "union",
], optional = true }
strum = { version = "=0.27.2", features = ["derive"], optional = true }
tokio = { version = "=1.48.0", features = ["fs", "parking_lot", "signal"] }
tokio-util = "=0.7.17"
toml = { version = "=0.9.8", default-features = false, features = [
    "parse",
    "serde",
    "std",
] }
tracing = { version = "=0.1.41", default-features = false, features = [
    "max_level_debug",
    "release_max_level_debug",
    "std",
] }
tracing-subscriber = { version = "=0.3.20", features = ["parking_lot"] }
tui-logger = { version = "=0.17.4", features = [
    "tracing-support",
], optional = true }
url = "=2.5.7"

[target.'cfg(all(any(target_arch = "aarch64", target_arch = "x86_64"), any(target_os = "linux", target_os = "macos", target_os = "windows")))'.dependencies]
mimalloc = { version = "=0.1.48", optional = true }

[target.'cfg(all(any(target_arch = "aarch64", target_arch = "x86_64"), any(target_os = "linux", target_os = "macos")))'.dependencies]
tikv-jemallocator = { version = "=0.6.1", optional = true }

[features]
dhat = ["dep:dhat"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc_v2 = ["dep:mimalloc"]
mimalloc_v3 = ["dep:mimalloc", "mimalloc/v3"]
tokio-multi-thread = []
tui = [
    "dep:crossterm",
    "dep:futures",
    "dep:smallvec",
    "dep:strum",
    "dep:ratatui",
    "dep:tui-logger",
]

[profile.release]
strip = true
lto = "fat"
codegen-units = 1

[profile.dhat]
inherits = "release"
debug = true
strip = "none"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
lto = "off"
