[package]
name = "proxy-scraper-checker"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
async-trait = "=0.1.89"
color-eyre = "=0.6.5"
compact_str = { version = "=0.10.0", features = ["serde"] }
crossterm = { version = "=0.29.0", default-features = false, features = [
  "event-stream",
  "windows",
], optional = true }
dhat = { version = "=0.3.3", optional = true }
dirs = "=6.0.0"
futures = { version = "=0.3.33", default-features = false, features = [
  "std",
], optional = true }
hickory-resolver = "=0.26.1"
http = "=1.4.2"
httpdate = "=1.0.3"
ipnet = "=2.12.0"
itoa = "=1.0.18"
log = { version = "=0.4.33", features = [
  "max_level_debug",
  "release_max_level_debug",
  "std",
] }
maxminddb = { version = "=0.29.0", features = ["mmap"] }
mimalloc = { version = "=0.1.52", features = ["override"], optional = true }
parking_lot = "=0.12.5"
rand = { version = "=0.10.2", default-features = false, features = [
  "std",
  "thread_rng",
] }
rapidhash = { version = "=4.5.1", features = ["unsafe"] }
ratatui = { version = "=0.30.2", default-features = false, features = [
  "crossterm",
  "layout-cache",
  "std",
], optional = true }
regex = "=1.13.1"
reqwest = { version = "=0.13.4", features = ["brotli", "gzip", "socks"] }
reqwest-middleware = "=0.5.2"
rlimit = "=0.11.0"
rustls = { version = "=0.23.42", default-features = false, features = [
  "aws_lc_rs",
  "prefer-post-quantum",
  "std",
  "tls12",
] }
rustls-platform-verifier = "=0.7.0"
serde = "=1.0.228"
serde_json = "=1.0.150"
smallvec = { version = "=1.15.2", features = [
  "const_generics",
  "union",
], optional = true }
strum = { version = "=0.28.0", features = ["derive"], optional = true }
tikv-jemallocator = { version = "=0.7.0", default-features = false, features = [
  "override_allocator_on_supported_platforms",
], optional = true }
tokio = { version = "=1.53.0", features = ["fs", "parking_lot", "signal"] }
tokio-util = "=0.7.18"
toml = { version = "=1.1.3", default-features = false, features = [
  "parse",
  "serde",
  "std",
] }
tracing = { version = "=0.1.44", default-features = false, features = [
  "max_level_debug",
  "release_max_level_debug",
  "std",
] }
tracing-subscriber = { version = "=0.3.23", features = ["parking_lot"] }
tui-logger = { version = "=0.18.3", features = [
  "tracing-support",
], optional = true }
url = "=2.5.8"

[target.'cfg(target_os = "macos")'.dependencies]
tikv-jemallocator-auto = { package = "tikv-jemallocator", version = "=0.7.0", default-features = false, features = [
  "override_allocator_on_supported_platforms",
], optional = true }

[features]
default = ["auto-allocator"]
__mimalloc = ["dep:mimalloc"]
auto-allocator = ["dep:tikv-jemallocator-auto"]
dhat = ["dep:dhat"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc_v2 = ["__mimalloc", "mimalloc/v2"]
mimalloc_v2_no_thp = ["mimalloc_v2", "mimalloc/no_thp"]
mimalloc_v3 = ["__mimalloc"]
mimalloc_v3_no_thp = ["mimalloc_v3", "mimalloc/no_thp"]
tokio-multi-thread = []
tui = [
  "dep:crossterm",
  "dep:futures",
  "dep:ratatui",
  "dep:smallvec",
  "dep:strum",
  "dep:tui-logger",
]

[profile.release]
strip = true
lto = "fat"
codegen-units = 1

[profile.dhat]
inherits = "release"
debug = true
strip = "none"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
lto = "off"
