[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxy-scraper-checker"
version = "0.0.0"
license = { text = "MIT" }
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.8,<4"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "aiofiles",
  "aiohttp>=3.8.6,<4",
  "aiohttp-socks>=0.7,<0.10",
  "attrs>=22.2",
  "brotli>=1,<2; implementation_name == 'cpython'",
  "brotlicffi<2; implementation_name != 'cpython'",
  "certifi",
  "charset-normalizer>=2,<4",
  "maxminddb>=1.3,<3",
  "platformdirs<5",
  "rich>=12.3,<14",
  "tomli<3; python_version < '3.11'",
  "winloop<0.1.7; implementation_name == 'cpython' and (sys_platform == 'cygwin' or sys_platform == 'win32')",
]
urls.repository = "https://github.com/monosans/proxy-scraper-checker"

[project.optional-dependencies]
non-termux = [
  "aiodns>=1.1,<4",
  "uvloop>=0.14,<0.21; implementation_name == 'cpython' and (sys_platform == 'darwin' or sys_platform == 'linux')",
]
nuitka = ["nuitka==2.4.8"]

[tool.uv]
dev-dependencies = [
  "mypy==1.11.2",
  "ruff==0.6.8",
  "tomli==2.0.1",
  "types-aiofiles==24.1.0.20240626",
  "typing-extensions==4.12.2",
]
